--- a/src/main/resources/static/navbar.css
+++ b/src/main/resources/static/navbar.css
@@ -1,5 +1,7 @@
 body{
-	background: url(https://www.meetic-group.com/download.php?file=/wp-content/uploads/sites/4/2017/09/match-pizza-making-classes.jpg);
+
+   background-image:url(/backGroundStyle/back.jpg);
+
     background-repeat: no-repeat;
     margin:auto;
 }
